# sactionOS

./: .clang-format  LICENSE  README.md  meson.build  meson_options.txt
boot/: bootasm.S  bootmain.c
cross/: i686_elf_clang.ini
docs/: api.md  arch.md  roadmap.md  syscall.md
include/: defs.h  elf.h  file.h  fs.h  kbd.h  memlayout.h  mmu.h  mp.h  object.h  proc.h  saction_api.h  stat.h  sysnum.h  types.h  x86.h
kernel/: bio.c  console.c  entry.S  entryother.S  exec.c  file.c  fs.c  ide.c  initcode.S  ioapic.c  kalloc.c  kbd.c  lapic.c  log.c  main.c  memide.c  mp.c  obj_console.c  object.c  picirq.c  proc.c  sleeplock.c  spinlock.c  string.c  swtch.S  syscall.c  trap.c  trapasm.S  uart.c  vm.c
scripts/: gen_vectors.py  link_kernel.py  link_kernel_memfs.py  link_user.py  make_disk.py  run_clang_format.py  sign.py
tools/: compat.h  mkfs.c
user/init/: init.c  start.S
user/lib/: debug.c  file.c  proc.c  syswrap.S
